crates/kirin-derive-core/src/kirin/property/snapshots/kirin_derive_core_3__kirin__property__tests__enum_wrapper.snap
---
source: crates/kirin-derive-core-3/src/kirin/property/mod.rs
expression: content
---
#[automatically_derived]
impl<T> ::kirin::ir::IsConstant for MyEnum<T> {
    fn is_constant(&self) -> bool {
        match self {
            Self::VariantA { inner } => <InnerStructA<T> as IsConstant>::is_constant(inner),
            Self::VariantB(field_0) => <InnerStructB as IsConstant>::is_constant(field_0),
        }
    }
}
