crates/kirin-derive-core/src/kirin/property/snapshots/kirin_derive_core_3__kirin__property__tests__struct_regular.snap
---
source: crates/kirin-derive-core-3/src/kirin/property/mod.rs
expression: content
---
#[automatically_derived]
impl IsConstant for MyStruct {
    fn is_constant(&self) -> bool {
        true
    }
}
